Update createContextualFragment behavior to latest spec

Update createContextualFragment behavior to latest spec listed under [1].
This means specifically we do not throw an exception when the context node is
not HTML or SVG and if initially the context element is null, we follow step 2
to create an appropriate context element to be used in step 3.

Behavior matches Firefox and Safari.

BUG=616760

[1] https://w3c.github.io/DOM-Parsing/#extensions-to-the-range-interface

Review-Url: https://codereview.chromium.org/2356373002
Cr-Commit-Position: refs/heads/master@{#420573}

Former-commit-id: a695888f5a4372b346a2d9c2650c8d81e9a5434b